--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,23 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:id="@+id/nav_find_people"
+            android:icon="@drawable/ic_baseline_explore_24"
+            android:title="@string/find_people" />
+
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_add_people"
+            android:icon="@drawable/ic_baseline_person_add_24"
+            android:title="@string/add_people" />
+
     </group>
+    <item android:title="System">
+        <menu>
+            <item
+                android:id="@+id/nav_sign_out"
+                android:icon="@drawable/ic_baseline_exit_to_app_24"
+                android:title="@string/sign_out" />
+        </menu>
+    </item>
+
 </menu>
