--- a/app/src/main/res/layout/activity_buddy_request.xml
+++ b/app/src/main/res/layout/activity_buddy_request.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
-    tools:context=".AllPeopleActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <com.mancj.materialsearchbar.MaterialSearchBar
-        android:id="@+id/material_search_bar"
-        app:mt_hint="Enter email"
-        app:mt_maxSuggestionsCount="50"
+    <include
+        android:id="@+id/app_bar_buddy_req"
+        layout="@layout/app_bar_buddy_req"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></com.mancj.materialsearchbar.MaterialSearchBar>
+        android:layout_height="match_parent" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_all_people"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
-</LinearLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_home"
+        app:menu="@menu/activity_main_drawer" />
+</androidx.drawerlayout.widget.DrawerLayout>
